# gPCS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: analysis.ipynb  firing_pixels.fits
src/EPLS/: EPLS.py
src/EPLS/data/: TS_star_alpha_0.01.npz  TS_star_alpha_0.05.npz  TS_star_alpha_0.05_4FGL.npz
src/gPCS/: gPCS.py
src/gPCS/data/: TS_star_alpha_0.01.npz  TS_star_alpha_0.05_4FGL.npz  TS_star_alpha_0.1.npz  TS_star_alpha_0.1_4FGL.npz
src/gPCS/data/fits/: README.md
src/gPSC2/: gPSC2.py
src/gPSC2/data/: TS_star_alpha_0.01_4FGL.npz  TS_star_alpha_0.1_4FGL.npz
tests/: test_gPCS.py
tests/files/: pix_4FGL.npz  pixel_firing.npz
