[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gPCS"
version = "1.0.0"
authors = [
  { name="Aurelio Amerio", email="aurelio.amerio@ific.uv.es" },
  { name="Francesca Calore", email=""},
  { name="Pasquale Serpico", email=""},
  { name="Bryan Zaldìvar", email=""}

]
description = "Code for the paper Gamma-ray point-source catalogue from photon-count statistics"
dependencies = [
"numpy",
"healpy",
"astropy",
"numba",
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/aurelio-amerio/gPCS"
"Bug Tracker" = "https://github.com/aurelio-amerio/gPCS/issues"
